fixed Amazon SES email configuration

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ PAYSTACK_SECRET_KEY = sk_test_99550d49b58cc3309542b3b74f3ace35675155e9
 AWS_REGION=eu-central-1
 AWS_ACCESS_KEY_ID=AKIA2O6LHFZ5GACOUU5S
 AWS_SECRET_ACCESS_KEY=6trkKRSun85l8dpcZMjDL8mWJ3ewvCCpQhTX9eQ3
-SES_SENDER_EMAIL=info@nairaworkers.com
+SES_SENDER_EMAIL=info@nairalancers.com
 SES_SENDER_NAME=Nairalancers
 
 # Firebase Admin (used for Google auth)
