--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ AWS_REGION=eu-central-1
 AWS_ACCESS_KEY_ID=AKIA2O6LHFZ5GACOUU5S
 AWS_SECRET_ACCESS_KEY=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
 # SES Email Configuration  
-SES_SENDER_EMAIL=noreply@nairaworkers.com
+SES_SENDER_EMAIL=info@nairalancers.com
 SES_SENDER_NAME=Nairalancers
 # Client URL for password reset links
 CLIENT_URL=http://localhost:5173
