--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^2.0.2",
     "node-7z": "^3.0.0",
     "node-unrar-js": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.0.1",
     "pdf-lib": "^1.17.1",
     "pdf2pic": "^3.1.1",
